# sqlexpr-rust

./: CLAUDE.md  Cargo.toml  EVALUATION_DESIGN.md  EVALUATOR_IMPLEMENTATION_PLAN.md  LICENSE  README.md  RELEASE_NOTES.md  SqlExprParser-EBNF-Final.ebnf  command_prompts.md
docs/: EVALUATION_DESIGN.md  EVALUATOR_IMPLEMENTATION_PLAN.md  PARSER_TYPE_CHECKING_PLAN.md  command_prompts.md
examples/: debug_failures.rs  debug_negative.rs  debug_parse.rs  debug_remaining.rs  demo_test_error_output.rs  negative_test_demo.rs  pretty_print_demo.rs  showcase.rs  showcase_pretty_print.sh  test_double_minus.rs  test_enhancements.rs  test_error_messages.rs  test_pretty_print.rs  test_simplification_demo.rs  verify_simplification.rs
examples/output/: evaluator_tests.out  parser_tests.out  parser_type_checking_tests.out
src/: ast.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs
tests/: evaluator_tests.rs  parser_tests.rs  parser_type_checking_tests.rs
