[package]
name = "sqlexpr-rust"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
description = "A SQL expression parser and evaluator in Rust"
repository = "https://github.com/richcar58/sqlexpr-rust"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["sql", "expression", "parser", "evaluator", "boolean"]
categories = ["parsing", "parser-implementations"]
exclude = [
    "/docs/*", 
    "/examples/*", 
    "/output/*", 
    "/tests/*", 
    "/.github", 
    "/CLAUDE.md",
    "/README.md",
    "/SqlExprParser-EBNF-Final.ebnf",
]

[dependencies]
regex = "1"

